--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,6 +35,7 @@
     0 6px 6px rgba(0, 0, 0, 0.23);
   --box-shadow-normal: 0 10px 20px rgba(0, 0, 0, 0.19),
     0 6px 6px rgba(0, 0, 0, 0.23);
+  --delay: 300ms;
 }
 html,
 body {
@@ -90,12 +91,58 @@ body::-webkit-scrollbar-thumb {
   border-radius: 6px;
   border: 3px solid var(--scrollbarBG);
 }
+/* animations */
 button:hover {
   transform: scale(1.1);
   transition: 0.4s cubic-bezier(0.18, 0.89, 0.32, 1.28);
   box-shadow: var(--box-shadow-normal);
 }
 
+.elementToAnimateOnStart {
+  display: inline-block;
+  /* animation: nameOfAnimation Duration Iterations Delay Effect */
+  animation: animationOnStartup 700ms ease-out;
+  animation-fill-mode:backwards;
+}
+@keyframes animationOnStartup {
+  from {
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+.hero-text > h1{
+  animation-delay: calc(1 * var(--delay));
+}
+.hero-text > h4{
+  animation-delay: calc(2 * var(--delay));
+}
+.hero-text > a{
+  animation-delay: calc(3 * var(--delay));
+}
+.hero-text > .hero-img-redes a:nth-child(1){
+  animation-delay: calc(4 * var(--delay));
+}
+.hero-text > .hero-img-redes a:nth-child(2){
+  animation-delay: calc(5 * var(--delay));
+}
+.hero-text > .hero-img-redes a:nth-child(3){
+  animation-delay: calc(6 * var(--delay));
+}
+.hero > img {
+  animation-delay: calc(7 * var(--delay));
+}
+
+/* end of animations */
 /*HEADER*/
 .navbar {
   position: fixed;
@@ -104,11 +151,9 @@ button:hover {
   z-index: 1;
 }
 .header {
-  flex-wrap: wrap;
+  display:flex;
   background-color: #039cd8;
   color: white;
-  width: 100%;
-  max-width: 100%;
   height: 50px;
 }
 ol,
@@ -144,6 +189,8 @@ ul {
   text-decoration: none;
 }
 .menu {
+  margin-left: auto;
+    margin-right: 2rem;
   height: inherit;
 }
 .header ol {
@@ -157,16 +204,13 @@ ul {
 
 /*HERO*/
 .hero {
-  flex-wrap: nowrap;
   background-image: url('../assets/FondoL2.png');
   height: 800px;
   background-size: cover;
   background-position-x: center;
   background-repeat: no-repeat;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  /* justify-content: space-between; */
   justify-content: space-around;
 }
 .hero-text {
@@ -189,6 +233,7 @@ ul {
   box-shadow: var(--box-shadow-light);
 }
 .hero-img-redes {
+  margin-top:1rem;
   margin-bottom: 100px;
   display: grid;
   justify-content: center;
@@ -223,8 +268,9 @@ ul {
 .space-img-espacio {
   width: 100%;
   z-index: 1;
-  margin-top: 22vh;
+  margin-top: 8vh;
 }
+
 .space-img-espacio-bg {
   width: 100%;
   height: 100%;
@@ -296,7 +342,7 @@ ul {
 /*SERVICIOS*/
 .carousel_container {
   width: 80%;
-  height: 60vw;
+  height: 500px;
   margin: auto;
   overflow: hidden;
   box-shadow: var(--box-shadow-normal);
@@ -647,7 +693,7 @@ footer {
   grid-template-rows: repeat(2, 1fr);
 }
 .contacto-link {
-  animation: rotateAnimation 2s 2 ease-in-out;
+  /* animation: rotateAnimation 2s 2 ease-in-out; */
   width: 50px;
   height: 50px;
   justify-self: center;
@@ -712,6 +758,9 @@ footer {
 
 /*Desktop*/
 @media screen and (max-width: 1024px) {
+  .carousel_container{
+    width: 70vw;
+  }
   .navbar {
     width: 100vw;
   }
@@ -798,9 +847,12 @@ footer {
 }
 /*tablets*/
 @media screen and (max-width: 768px) {
-  /* .carousel_container {
-    width: 80%;
-  } */
+  .space-img-espacio {
+    margin-top: 22vh;
+  }
+  .carousel_container {
+    height: 60vw;
+  }
   .servicios-item {
     width: 80vw;
     padding: 0.5em;
@@ -815,7 +867,7 @@ footer {
   }
   .hero-img-serv {
     width: 50%;
-    margin: 2rem 0 130px 0;
+    margin: 0 0 130px 0;
   }
   .hero-img-redes {
     margin-top: 20px;
